@@ -22,133 +22,138 @@ import java.util.Random;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 
+/**
+ * Controller handling user registration, login, OTP generation, and retrieval.
+ *
+ * Author: Mohamed Ayadi
+ * GitHub: https://github.com/Mayedi007
+ * Date: 2025-04-13
+ */
 
 @Controller("user")
 @RequestMapping("/user")
 @CrossOrigin(allowCredentials = "true", allowedHeaders = "*")
-public class UserController extends BaseController{
+public class UserController extends BaseController {
 
     @Autowired
     private UserService userService;
 
     @Autowired
     private HttpServletRequest httpServletRequest;
+
     @Autowired
     private UserPasswordDOMapper userPasswordDOMapper;
+
     @Autowired
-    private RedisTemplate redisTemplate;
+    private RedisTemplate<String, Object> redisTemplate;
 
-
-    //用户接口
-    @RequestMapping(value = "/login", method = {RequestMethod.POST},consumes = {CONTENT_TYPE_FORMED})
+    /**
+     * User login endpoint with Redis-based token authentication.
+     */
+    @PostMapping(value = "/login", consumes = {CONTENT_TYPE_FORMED})
     @ResponseBody
-    public CommonReturnType login(@RequestParam(name = "telphone") String telphone,
-                                  @RequestParam(name = "password") String password) throws BusinessException, UnsupportedEncodingException, NoSuchAlgorithmException {
-        if(org.apache.commons.lang3.StringUtils.isEmpty(telphone) ||
-                StringUtils.isEmpty(password)){
+    public CommonReturnType login(@RequestParam("telphone") String telphone,
+                                  @RequestParam("password") String password)
+            throws BusinessException, UnsupportedEncodingException, NoSuchAlgorithmException {
+
+        if (org.apache.commons.lang3.StringUtils.isEmpty(telphone) || StringUtils.isEmpty(password)) {
             throw new BusinessException(EmBusinessError.PARAMETER_VALIDATION_ERROR);
         }
 
-        //用户登录服务，校验用户登录是否合法
-        UserModel userModel = userService.validateLogin(telphone, this.EncodeByMd5(password));
+        // Validate login
+        UserModel userModel = userService.validateLogin(telphone, encodeByMd5(password));
 
-        //1-将登陆凭证加入用户登陆成功的session内
-//        this.httpServletRequest.getSession().setAttribute("IS_LOGIN", true);
-//        this.httpServletRequest.getSession().setAttribute("LOGIN_USER", userModel);
+        // Generate token
+        String uuidToken = UUID.randomUUID().toString().replace("-", "");
 
-        //2-若用户登陆验证成功后将对应的登录信息喝登录凭证一起存入redis中
-        //2.1-生成登录凭证token，uuid
-        String uuidToken = UUID.randomUUID().toString();
-        uuidToken = uuidToken.replace("-", "");
-        //2.2-建立token和用户登录态的联系
+        // Store user session in Redis
         redisTemplate.opsForValue().set(uuidToken, userModel);
         redisTemplate.expire(uuidToken, 1, TimeUnit.HOURS);
 
-        //下发了token
-        return CommonReturnType.creat(uuidToken);
+        return CommonReturnType.create(uuidToken);
     }
-    //用户注册接口
-    @RequestMapping(value = "/register", method = {RequestMethod.POST},consumes = {CONTENT_TYPE_FORMED})
+
+    /**
+     * Register a new user.
+     */
+    @PostMapping(value = "/register", consumes = {CONTENT_TYPE_FORMED})
     @ResponseBody
-    public CommonReturnType register(@RequestParam(name="telphone") String telphone,
-                                     @RequestParam(name="otpCode") String otpCode,
-                                     @RequestParam(name="name") String name,
-                                     @RequestParam(name="gender") String gender,
-                                     @RequestParam(name="age") String age,
-                                     @RequestParam(name="password") String password) throws BusinessException, UnsupportedEncodingException, NoSuchAlgorithmException {
-        //验证手机号与otpcode
-        String inSessionOtpCode = (String) this.httpServletRequest.getSession().getAttribute(telphone);
-        if(!com.alibaba.druid.util.StringUtils.equals(otpCode,inSessionOtpCode)){
-            throw new BusinessException(EmBusinessError.PARAMETER_VALIDATION_ERROR, "短信验证码不符合");
+    public CommonReturnType register(@RequestParam("telphone") String telphone,
+                                     @RequestParam("otpCode") String otpCode,
+                                     @RequestParam("name") String name,
+                                     @RequestParam("gender") String gender,
+                                     @RequestParam("age") String age,
+                                     @RequestParam("password") String password)
+            throws BusinessException, UnsupportedEncodingException, NoSuchAlgorithmException {
+
+        String inSessionOtpCode = (String) httpServletRequest.getSession().getAttribute(telphone);
+        if (!StringUtils.equals(otpCode, inSessionOtpCode)) {
+            throw new BusinessException(EmBusinessError.PARAMETER_VALIDATION_ERROR, "Incorrect OTP code");
         }
 
-        //用户注册流程
         UserModel userModel = new UserModel();
         userModel.setName(name);
         userModel.setAge(Integer.valueOf(age));
-        userModel.setGender(new Byte(gender));
+        userModel.setGender(Byte.valueOf(gender));
         userModel.setTelphone(telphone);
         userModel.setRegisterMode("byphone");
-        userModel.setEncrptPassword(this.EncodeByMd5(password));
+        userModel.setEncrptPassword(encodeByMd5(password));
 
         userService.register(userModel);
 
-        return CommonReturnType.creat(null);
+        return CommonReturnType.create(null);
     }
 
-
-    public String EncodeByMd5(String str) throws UnsupportedEncodingException, NoSuchAlgorithmException {
-
-        String newstr = Base64.getEncoder().encodeToString(str.getBytes());
-
-        return newstr;
-    }
-
-    //用户获取otp短信接口
-    @RequestMapping(value = "/getotp", method = {RequestMethod.POST},consumes = {CONTENT_TYPE_FORMED})
+    /**
+     * Generate and store OTP code in session.
+     */
+    @PostMapping(value = "/getotp", consumes = {CONTENT_TYPE_FORMED})
     @ResponseBody
-    public CommonReturnType getOtp(@RequestParam(name="telphone") String telphone){
-        //按照一定规则生成OTP验证码
+    public CommonReturnType getOtp(@RequestParam("telphone") String telphone) {
         Random random = new Random();
-        int randomInt = random.nextInt(99999);
-        randomInt += 10000;
+        int randomInt = random.nextInt(99999) + 10000;
         String otpCode = String.valueOf(randomInt);
 
-        //OTP验证码同对应用户手机号关联
         httpServletRequest.getSession().setAttribute(telphone, otpCode);
 
-        //OTP验证码通过短信通道发送给用户,省略
+        // Simulate SMS sending
         System.out.println("telphone = " + telphone + " & otpCode = " + otpCode);
 
-        return CommonReturnType.creat(null);
-
+        return CommonReturnType.create(null);
     }
 
-
-
-
-    @RequestMapping("/get")
+    /**
+     * Retrieve a user by ID.
+     */
+    @GetMapping("/get")
     @ResponseBody
-    public CommonReturnType getUser(@RequestParam(name="id") Integer id) throws BusinessException {
+    public CommonReturnType getUser(@RequestParam("id") Integer id) throws BusinessException {
         UserModel userModel = userService.getUserById(id);
 
-        if(userModel == null){
+        if (userModel == null) {
             throw new BusinessException(EmBusinessError.USER_NOT_EXIST);
         }
 
         UserVO userVO = convertFromModel(userModel);
-
-        return CommonReturnType.creat(userVO);
+        return CommonReturnType.create(userVO);
     }
 
-    private  UserVO convertFromModel(UserModel userModel){
-        if(userModel == null){
-            return null;
-        }
+    /**
+     * Convert UserModel to UserVO.
+     */
+    private UserVO convertFromModel(UserModel userModel) {
+        if (userModel == null) return null;
+
         UserVO userVO = new UserVO();
-        BeanUtils.copyProperties(userModel,userVO);
+        BeanUtils.copyProperties(userModel, userVO);
         return userVO;
     }
 
-
+    /**
+     * Encode password using Base64 (simulated encryption).
+     * NOTE: In production, use a secure hashing algorithm like bcrypt or Argon2.
+     */
+    public String encodeByMd5(String str) throws UnsupportedEncodingException {
+        return Base64.getEncoder().encodeToString(str.getBytes("UTF-8"));
+    }
 }
